--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.0",
     "@chakra-ui/react": "^1.0.0",
-    "@emotion/react": "^11.0.0",
+    "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.0.0",
     "@urql/exchange-graphcache": "^3.4.0",
     "formik": "^2.2.6",
@@ -19,7 +19,8 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "urql": "^1.11.6"
+    "urql": "^1.11.6",
+    "wonka": "^4.0.15"
   },
   "license": "MIT",
   "devDependencies": {
