--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon dist/src/index.js",
-        "start": "node dist/src/index.js",
+        "dev": "nodemon dist/index.js",
+        "start": "node dist/index.js",
         "watch": "tsc -w"
     },
     "keywords": [],
