--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.0",
+    "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.0.0",
@@ -16,6 +16,7 @@
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
