--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "build": "tsc",
         "dev": "nodemon dist/index.js",
+        "gen-env": "gen-env-types .env -o src/env.d.ts -e .",
         "start": "node dist/index.js",
         "watch": "tsc -w"
     },
@@ -22,6 +24,8 @@
         "@types/redis": "^2.8.28",
         "@types/uuid": "^8.3.0",
         "@types/validator": "^13.1.3",
+        "gen-env": "^0.1.3",
+        "gen-env-types": "^1.0.5",
         "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
         "ts-node": "^9.1.1",
@@ -34,6 +38,7 @@
         "connect-redis": "^5.0.0",
         "cors": "^2.8.5",
         "dataloader": "^2.0.0",
+        "dotenv-safe": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "graphql": "^15.5.0",
