--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.1.5",
@@ -18,6 +19,7 @@
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "next": "latest",
+    "next-apollo": "^5.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "urql": "^1.11.6",
@@ -28,6 +30,7 @@
     "@graphql-codegen/cli": "1.20.1",
     "@graphql-codegen/typescript": "1.20.2",
     "@graphql-codegen/typescript-operations": "1.17.14",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@graphql-codegen/typescript-urql": "^2.0.3",
     "@types/node": "^14.14.25",
     "isomorphic-unfetch": "^3.1.0",
