--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:secret@localhost:5432/lireddit
+DATABASE_URL=postgresql://postgres:secret@localhost:5432/career_hub
 REDIS_URL=127.0.0.1:6379
 PORT=4000
 SESSION_SECRET=dfaDSAF321fAR23af3AF311s
